wled00/data/index.css
/* ... */
@media all and (max-width: 550px) and (min-width: 374px) {
	#info table .btn, #nodes table .btn {
		width: 200px;
	}
	#info .infobtn, #nodes .infobtn {
		width: 145px;
	}
	#info div, #nodes div {
		max-width: 320px;
	}
}

@media all and (max-width: 420px) {
	#buttonNodes {
		display: none;
	}
}

@media all and (max-width: 639px) {
	.top button {
		width: 16.6%;
		padding: 8px 0 4px 0;
	}
	#briwrap {
		margin-top: 0px !important;
		float: none;
	}
	.hd {
		display: none !important;
	}
}

@media all and (min-width: 420px) and (max-width: 639px) {
	.top button {
		width: 14.28%;
		padding: 8px 0 4px 0;
	}
}

@media all and (min-width: 640px) and (max-width: 767px) {
	#buttonNodes {
		display: none;
	}
}

/* small screen & tablet "PC mode" support */
@media all and (min-width: 1024px) and (max-width: 1249px) {
	#segutil, #segutil2, #segcont, #putil, #pcont, #pql, #fx, #palw, #psFind, #sliders {
		width: 100%;
		max-width: 280px;
		font-size: 18px;
	}
	#picker {
		width: 230px;
	}
	#putil .btn-s {
		width: 114px;
	}
	#sliders .sliderbubble {
		display: none;
	}
	.sliderwrap {
		width: calc(100% - 28px);
	}
	#sliders .sliderwrap {
		left: 12px;
	}
	.segname {
		max-width: calc(100% - 110px);
	}
	.segt TD {
		padding: 0 !important;
	}
	input[type="number"], input[type=text], select, textarea {
		font-size: 18px;
	}
	input[type="number"] {
		width: 32px;
	}
	.lstIcontent {
		padding-left: 8px;
	}
	.revchkl {
		max-width: 183px;
		text-overflow: ellipsis;
		overflow-x: clip;
	}
}

